# wasmdemo

./: CMakeLists.txt  README.md  denverwasm.cc  download_googletest.py  generate_index_js.py  index.html  index.js  wasm32.toolchain.cmake  wasmdemo.cc
.github/workflows/: presubmits.yml
cpp/: CMakeLists.txt  config.h.in
cpp/include/common/wasmdemo/: benchmark.h  bloom.h  hash.h  md5.h  memory.h  wasmdemo.h
cpp/include/nonwasm32/wasmdemo/: macros.h
cpp/include/wasm32/wasmdemo/: macros.h
cpp/include/wasmdemo/: macros.h
cpp/src/: base64.cc  bloom.cc  hash.cc  md5.cc  memory.cc  wasmdemo.cc
cpp/test/: bloom_test.cc  hash_test.cc  md5_test.cc  md5_testing.cc  md5_testing.h  memory_test.cc  wasmdemo_imports_impl.cc  wasmdemo_imports_impl.h  wasmdemo_test.cc
demo-website/: README.md  firebase-webchannel-wrapper-v0.8.1.tgz  index.css  index.html  package.json  rollup.config.js  tsconfig.json
demo-website/src/: index.mjs  index_browser.ts  logging_browser.ts  run_the_test.ts  test_bloom_filter.ts
demo-website/src/bloom_filter_golden_test_data/: index.ts
demo-website/src/wasm/: wasb.js  wasm.json
scripts/: header_guard_gen.py
src/: wasmdemo.cc
www/: CMakeLists.txt  filter.py  generate_index_js.py  index.html  index.js  wasm.json
www2/: index.html  package.json  rollup.config.js
www2/src/: index_browser.ts  index_node.ts  run_the_test.ts  util.ts
